--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "yargs": "^16.2.0"
   },
   "devDependencies": {
+    "@types/node": "^14.14.37",
     "@types/uuid": "^8.3.0",
     "@types/yargs": "^16.0.1",
     "ts-node": "^9.1.1",
