--- a/package.json
+++ b/package.json
@@ -1,26 +1,19 @@
 {
   "name": "test-client-node",
-  "version": "1.0.0",
-  "main": "./bin/index.js",
+  "repository": "git@github.com:EventStore/test-client-node.git",
+  "author": "George Payne <georgepayne@hotmail.com>",
+  "license": "MIT",
   "private": true,
-  "bin": {
-    "test-client-node": "./bin/index.js"
-  },
+  "workspaces": [
+    "test-runner"
+  ],
   "scripts": {
-    "start": "node ./bin/index.js",
-    "build": "tsc",
-    "dev": "tsc && node ./bin/index.js --connection-string \"esdb://c0e0d3arh41g7drr2ilg.mesdb.eventstore.cloud:2113\""
-  },
-  "dependencies": {
-    "@eventstore/db-client": "1.2.0",
-    "uuid": "^8.3.2",
-    "yargs": "^16.2.0"
+    "build": "run-s build:*",
+    "build:runner": "yarn workspace test-runner build",
+    "start": "yarn workspace test-runner start",
+    "dev": "yarn workspace test-runner dev"
   },
   "devDependencies": {
-    "@types/node": "^14.14.37",
-    "@types/uuid": "^8.3.0",
-    "@types/yargs": "^16.0.1",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "npm-run-all": "^4.1.5"
   }
 }
