--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build:pbjs": "yarn workspace @eventstore/db-client-pbjs build",
     "build:runner": "yarn workspace test-runner build",
     "start": "yarn workspace test-runner start",
-    "dev": "yarn workspace test-runner dev"
+    "dev": "yarn workspace test-runner dev",
+    "profile": "yarn workspace test-runner profile"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
